#80 ✨ [doc][term][mod] a first alpha someone else can actually run
Two halves of the same problem: a player has nowhere to read how to
install this, and nothing to download if they did.

Setup guides in EN and DE (docs/setup.*.md), written for someone who has
never seen the repo: two mods into the mods folder, unzip the terminal,
open localhost:3001. They ship inside the release archive as well, so
they are readable without a browser. modDesc's two TODO descriptions are
filled in for the same reason - that text is the mod list entry.

Releases are tag-driven. release.yml checks the tag against the three
places a version is written, gates on the existing CI via workflow_call,
zips the mod, builds a bundled-JRE app image per OS with jpackage, and
publishes a prerelease. Windows and Linux only: the server reads files as
the game writes them, so it lives on the machine running FS25.

Three things found on the way that would each have shipped broken:

🔥 No JVM toolchain was pinned anywhere, so CI's JDK 25 emitted class
  files nothing older could load, against a documented "JDK 21+".
  Pinned to 21, with -Xjdk-release so a newer API cannot slip in.
🔥 Gradle's archive tasks normalise permissions, so the app image ran
  while the archive around it arrived with an unrunnable launcher. The
  bit is handed back explicitly, and the workflow now smoke-tests the
  extracted archive rather than the build output.
🔥 gameDir() guessed one path per OS. Windows redirects Documents into
  OneDrive on a great many machines, and the symptom was an empty
  dashboard with nothing on screen to explain it. It now probes the
  likely candidates, says which it took, and says so loudly when there
  is none - alongside the LAN address, which the setup guides need it
  to print.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>